// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NatGridItem and local styled components NatGridItem component Properties of NatGridItem Should render NatGridItem component  1`] = `
<View
  sizeMedium={true}
  style={
    Array [
      Object {
        "height": 200,
        "marginBottom": 24,
        "marginLeft": 12,
        "marginRight": 12,
        "width": 156,
      },
    ]
  }
>
  <Image
    accessibilityLabel="descrição"
    accessibilityRole="image"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    sizeMedium={true}
    source={
      Object {
        "uri": "#",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 6,
          "height": 156,
          "marginBottom": 8,
          "width": 156,
        },
      ]
    }
  />
  <View
    accessibilityLabel="descrição"
    sizeMedium={true}
    style={
      Array [
        Object {
          "height": 40,
          "lineHeight": 20,
          "width": 156,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#777777",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "System",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "500",
            "textAlign": "center",
          },
        ]
      }
    >
      descrição
    </Text>
  </View>
</View>
`;

exports[`NatGridItem and local styled components NatGridItem component Should render NatGridItem component  1`] = `
<View
  sizeMedium={true}
  style={
    Array [
      Object {
        "height": 200,
        "marginBottom": 24,
        "marginLeft": 12,
        "marginRight": 12,
        "width": 156,
      },
    ]
  }
>
  <Image
    accessibilityLabel="Texto"
    accessibilityRole="image"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    sizeMedium={true}
    source={
      Object {
        "uri": "#",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 6,
          "height": 156,
          "marginBottom": 8,
          "width": 156,
        },
      ]
    }
  />
  <View
    accessibilityLabel="Texto"
    sizeMedium={true}
    style={
      Array [
        Object {
          "height": 40,
          "lineHeight": 20,
          "width": 156,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#777777",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "System",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "500",
            "textAlign": "center",
          },
        ]
      }
    >
      Texto
    </Text>
  </View>
</View>
`;
